# libchess

./: .gitignore  Makefile.am  configure.ac  libchess.pc.in
doc/: Makefile.am  doxygen.conf.in
src/: Makefile.am  chess.c  chess.h
tests/: Makefile.am  check_libchess.c
